--- a/app/views/draft.view.html
+++ b/app/views/draft.view.html
@@ -262,9 +262,9 @@
                       </div>
                     </div>
                   </tab>
-                  <div class = "col-xs-4 no-padding" id = "draft-filter">
+                  <div class = "col-xs-4 no-padding draft-filter">
                     <div class = "form-group">
-                      <input ng-model = "q" id = "search" class = "form-control" placeholder = "Name, Position, Nationality...">
+                      <input ng-model = "q" class = "search form-control" placeholder = "Name, Position, Nationality...">
                     </div>
                   </div>
                 </tabset>
