--- a/app/views/team.view.html
+++ b/app/views/team.view.html
@@ -1,11 +1,13 @@
-<div class="col-xs-12 back_to_menu">
-  <a ui-sref = "league.menu({id:league_id})">
-    <i class = "fa fa-arrow-circle-o-left"></i>
-  </a>
+<div class="col-xs-12 back_to_menu big_title">
+  <h1>
+    <a ui-sref = "league.menu({id:league_id})" tooltip-placement = "top" tooltip = "Back to Menu">
+      <i class = "fa fa-arrow-circle-o-left"></i>
+    </a>
+    <span>My Team</span>
+  </h1>
 </div>
 
-<div class = "container-fluid">
-  <h2>Team's Name</h2>
+<div class = "col-xs-12">
   <h4>
     Team Formation: {{defense.length}} - {{midfield.length}} - {{forward.length}}
   </h4>
