--- a/app/views/matches.view.html
+++ b/app/views/matches.view.html
@@ -11,7 +11,7 @@
   <table class="table table-bordered table-striped my-table matchday-table">
     <thead>
       <tr>
-        <th colspan="3" class="text-center" >Match Day {{$index+1}}</th>
+        <th colspan="5" class="text-center" >Match Day {{$index+1}}</th>
       </tr>
     </thead>
     <tbody>
@@ -19,7 +19,17 @@
 
         <td ng-if="match.result == 0 || match.result == 2" class="text-center">{{usernames[match.homePlayer]}}</td>
 		    <td ng-if="match.result == 1 || match.result == 3" class="text-center"><strong>{{usernames[match.homePlayer]}}</strong></td>
-		    <td class="text-center"><small>vs</small></td>
+        <td class="text-center point_column" ng-if="match.result != 0">
+          <strong ng-if="match.result == 1 || match.result == 3">{{ match.homePoints }}Pts.</strong>
+          <span ng-if="match.result == 2">{{ match.homePoints }}Pts.</span>
+        </td>
+        <td class="text-center point_column no_results" ng-if="match.result == 0"></td>
+		    <td class="text-center versus_column"><small>vs</small></td>
+        <td class="text-center point_column no_results" ng-if="match.result == 0"></td>
+        <td class="text-center point_column" ng-if="match.result != 0">
+          <strong ng-if="match.result == 2 || match.result == 3">{{ match.awayPoints }}Pts.</strong>
+          <span ng-if="match.result == 1">{{ match.awayPoints }}Pts.</span>
+        </td>
 		    <td ng-if="match.result == 0 || match.result == 1" class="text-center">{{usernames[match.awayPlayer]}}</td>
 		    <td ng-if="match.result == 2 || match.result == 3" class="text-center"><strong>{{usernames[match.awayPlayer]}}</strong></td>
 
