--- a/app/views/userpage.view.html
+++ b/app/views/userpage.view.html
@@ -1,16 +1,21 @@
 <div class = "container" id = "user_page">
   <div class = "col-xs-12 big_title">
-    <h1 class="col-xs-6">My Leagues</h1>
-    <div class="col-xs-6 text-right">
-      <button type = "button" class = "btn btn-primary league_btn" ui-sref = "new_league"><i class="fa fa-plus"></i> Create a league</button>
-      <button type = "button" class = "btn btn-primary league_btn" ui-sref = "join_league"><i class="fa fa-link"></i> Join a league</button>
+    <h1 class = "col-xs-6">My Leagues</h1>
+    <div class = "col-xs-6 text-right">
+      <button type = "button" class = "btn btn-primary league_btn" ui-sref = "new_league">
+        <i class = "fa fa-plus"></i> Create a league
+      </button>
+      <button type = "button" class = "btn btn-primary league_btn" ui-sref = "join_league">
+        <i class = "fa fa-link"></i> Join a league
+      </button>
     </div>
   </div>
 
   <ul class = "col-xs-12">
     <li ng-repeat = "league in leagues" class = "">
-      <a ui-sref = "league.menu({id:league.id})">
-        <div class = "col-xs-12 no-padding">
+      <div class = "col-xs-12 no-padding">
+        <a ng-if = "league.state == 'READYTODRAFT' || league.state == 'DRAFTING'" ui-sref = "draft({id:league_id})">
+        <a ng-if = "league.state != 'READYTODRAFT' && league.state != 'DRAFTING'" ui-sref = "league.menu({id:league.id})">
           <img src = "../images/liganos.jpg" class = "col-xs-7 no-padding" alt = "league logo"/>
           <div class = "col-xs-5">
             <div class = "league_info">
@@ -19,13 +24,18 @@
               <p><span>Number of Teams: </span>4</p>
               <p><span>Current Position: </span>3th</p>
             </div>
-
-            <button class = "btn btn-sm btn-warning delete_league_btn" ng-click = "delete_league(league.id)"  tooltip-placement = "top" tooltip = "Delete League">
-              <i class = "fa fa-trash-o" aria-hidden = "true"></i>
-            </button>
           </div>
+        </a>
+
+        <div class="text-center">
+          <button class = "btn btn-sm btn-warning delete_league_btn" ng-click = "delete_league(league.id)" tooltip-placement = "top" tooltip = "Delete League">
+            <i class = "fa fa-trash-o" aria-hidden = "true"></i>
+          </button>
+          <button popover-placement="bottom" popover = "http://{{redirect_location}}/#/join_league/{{league.id}}" class = "btn btn-sm btn-warning delete_league_btn" >
+            <i class = "fa fa-share" aria-hidden = "true"></i>
+          </button>
         </div>
-      </a>
+      </div>
     </li>
   </ul>
 </div>
