--- a/app/views/league_menu.view.html
+++ b/app/views/league_menu.view.html
@@ -1,5 +1,10 @@
-<div class = "col-xs-12 big_title">
-  <h1 class="col-xs-6">{{league.name}}</h1>
+<div class = "col-xs-12 back_to_menu big_title">
+  <h1>
+    <a ui-sref = "userpage" tooltip-placement = "top" tooltip = "Back to Menu">
+      <i class = "fa fa-arrow-circle-o-left"></i>
+    </a>
+    <span>{{league.name}}</span>
+  </h1>
 </div>
 
 <ul class = "col-xs-12" id="league_menu">
