save team button working.

--- a/app/views/team.view.html
+++ b/app/views/team.view.html
@@ -6,10 +6,10 @@
     <span>My Team</span>
   </h1>
 </div>
-
 <div class = "col-xs-12">
   <h4>
     Team Formation: {{defense.length}} - {{midfield.length}} - {{forward.length}}
+    <button ng-click="saveTeam()">Save</button>
   </h4>
   <div>
     <div class = "col-lg-12">
