--- a/app/styles/responsive.scss
+++ b/app/styles/responsive.scss
@@ -2,6 +2,7 @@
 $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
 // bower:scss
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
+@import "AngularJS-Toaster/toaster.scss";
 // endbower
 
 @media only screen and (min-width : 768px) {
