Change to League listing.

--- a/app/views/userpage.view.html
+++ b/app/views/userpage.view.html
@@ -19,9 +19,9 @@
           <div class = "col-xs-5">
             <div class = "league_info">
               <h3 class = "league_name">{{league.name}}&nbsp;</h3>
-              <p><span>Started: </span>Yes</p>
-              <p><span>Number of Teams: </span>4</p>
-              <p><span>Current Position: </span>3th</p>
+              <p><span>State: </span>{{league.state}}</p>
+              <p><span>Number of Teams: </span>{{league.numTeams}}</p>
+              <!--<p><span>Current Position: </span>3th</p>-->
             </div>
           </div>
         </a>
