--- a/app/views/draft.view.html
+++ b/app/views/draft.view.html
@@ -62,12 +62,6 @@
           <div class = "col-lg-6" id = "draft_table_section">
             <h3 class = "section-title"><span class = "fa fa-plus-circle"></span> Available Players</h3>
             <div class = "row no-side-margin">
-              <!--<div id = "timer" class = "col-md-12 col-sm-12 col-xs-12 no-padding">
-                <h1 ng-class = "{'green':started,'red':!started}">{{timer}}<button ng-if = "!started && owner" ng-click = "startDraft()" tooltip-placement = "top" tooltip = "Start Draft"><i class="fa fa-play"></i></button></h1>
-              </div>-->
-            </div>
-
-            <div class = "row no-side-margin">
               <div id = "draft-main-table" class = "col-sm-12 no-padding">
                 <tabset>
                   <tab index = "0" heading = "All">
@@ -285,7 +279,7 @@
             <accordion close-others = "oneAtATime">
               <accordion-group heading = "Goalkeepers - {{ my_picks[1].length }}" is-open = "true">
                 <ul>
-                  <li ng-repeat = "pick in my_picks[1] track by $index">
+                  <li ng-repeat = "pick in my_picks[1] track by $index" class="col-xs-6">
                     <div ng-if = "players[pick].positionDescription == 'Goalkeeper'">
                       {{players[pick].name}}
                     </div>
@@ -294,7 +288,7 @@
               </accordion-group>
               <accordion-group heading = "Defenders - {{ my_picks[2].length }}" is-open = "true">
                 <ul>
-                  <li ng-repeat = "pick in my_picks[2] track by $index">
+                  <li ng-repeat = "pick in my_picks[2] track by $index" class="col-xs-6">
                     <div ng-if = "players[pick].positionDescription =='Defender'">
                       {{players[pick].name}}
                     </div>
@@ -303,7 +297,7 @@
               </accordion-group>
               <accordion-group heading = "Midfielders  - {{ my_picks[3].length }}" is-open = "true">
                 <ul>
-                  <li ng-repeat = "pick in my_picks[3] track by $index">
+                  <li ng-repeat = "pick in my_picks[3] track by $index" class="col-xs-6">
                     <div ng-if = "players[pick].positionDescription =='Midfielder'">
                       {{players[pick].name}}
                     </div>
@@ -312,7 +306,7 @@
               </accordion-group>
               <accordion-group heading = "Forwards - {{ my_picks[4].length }}" is-open = "true">
                 <ul>
-                  <li ng-repeat = "pick in my_picks[4] track by $index">
+                  <li ng-repeat = "pick in my_picks[4] track by $index" class="col-xs-6">
                     <div ng-if = "players[pick].positionDescription =='Forward'">
                       {{players[pick].name}}
                     </div>
