--- a/app/styles/draft.scss
+++ b/app/styles/draft.scss
@@ -27,8 +27,8 @@ $digital: 'Digital-7';
         text-align: center;
         color: #fff;
         background: $contrast;
-        box-shadow: 0px 2px 10px #fff,
-        -2px 2px 15px #fff, 2px 2px 15px #fff;
+        box-shadow: 0px 2px 6px rgba(0,0,0,0.4),
+        -2px 2px 10px rgba(0,0,0,0.4), 2px 2px 10px rgba(0,0,0,0.4);
 
         button {
           background: none;
@@ -100,42 +100,6 @@ $digital: 'Digital-7';
   #draftRow {
     max-height: 80%;
 
-    #timer {
-      font-family: 'Digital-7';
-      margin-bottom: 0.5em;
-
-      h1 {
-        font-size: 6em;
-        display: table;
-        margin: 0;
-        padding: 0 5px;
-        min-width: 1.2em;
-        text-align: center;
-        @include full_bg('http://www.pixeden.com/media/k2/galleries/44/003-metal-and-carbon-fiber-pattern-background-texture.jpg');
-
-        &.red {
-          color: red;
-          box-shadow: inset 0 1px 1px red, 0 0 25px red;
-        }
-
-        &.green {
-          color: green;
-          box-shadow: inset 0 1px 1px red, 0 0 25px red;
-        }
-
-        button {
-          font-size: 0.2em;
-          background: none;
-          border: none;
-
-          &:active, &:focus, &:hover {
-            outline: none;
-            box-shadow: none;
-          }
-        }
-      }
-    }
-
     #draft_favorite_section {
       ul {
         li.item {
@@ -201,6 +165,7 @@ $digital: 'Digital-7';
 
               ul {
                 margin: 0;
+                list-style-type: none;
               }
             }
           }
