--- a/app/views/home.view.html
+++ b/app/views/home.view.html
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <a ng-if="!loggedIn()" class="btn btn-lg btn-primary" ui-sref="login" id="login_home_btn">Login Now</a>
+          <a ng-if="!loggedIn()" class="btn btn-lg btn-primary" ng-click="login()" id="login_home_btn">Login Now</a>
           <div ng-if="loggedIn()"  id="user_home_btn">
             <a ui-sref="userpage"><img width="50" height="50" ng-src="{{user.picture.data.url}}"></a>
             <a ui-sref="userpage">Hi, {{user.name}}</a>
