--- a/app/views/team.view.html
+++ b/app/views/team.view.html
@@ -1,14 +1,15 @@
 <div class="col-xs-12 back_to_menu big_title">
-  <h1>
+  <h1 class="col-xs-6 no-padding">
     <a ui-sref = "league.menu({id:league_id})" tooltip-placement = "top" tooltip = "Back to Menu">
       <i class = "fa fa-arrow-circle-o-left"></i>
     </a>
     <span>My Team</span>
   </h1>
+
+  <h4 class="col-xs-6 no-padding text-right"><span class="text-uppercase">Team Formation </span>{{defense.length}} - {{midfield.length}} - {{forward.length}}</h4>
 </div>
 <div class = "col-xs-12">
   <h4>
-    Team Formation: {{defense.length}} - {{midfield.length}} - {{forward.length}}
     <button ng-click="saveTeam()">Save</button>
   </h4>
   <div>
