--- a/app/views/userpage.view.html
+++ b/app/views/userpage.view.html
@@ -2,7 +2,7 @@
   <div class = "col-xs-12 big_title">
     <h1 class = "col-xs-6">My Leagues</h1>
     <div class = "col-xs-6 text-right">
-      <button type = "button" class = "btn btn-primary league_btn" ui-sref = "new_league">
+      <button type = "button" class = "btn btn-primary league_btn"  data-toggle="modal" data-target="#create_league_modal">
         <i class = "fa fa-plus"></i> Create a league
       </button>
       <button type = "button" class = "btn btn-primary league_btn" ui-sref = "join_league">
@@ -41,3 +41,22 @@
     </li>
   </ul>
 </div>
+
+
+<div id="create_league_modal" class="modal fade" tabindex="-1" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">New League</h4>
+      </div>
+      <div class="modal-body">
+        <p>One fine body&hellip;</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
