--- a/app/views/userpage.view.html
+++ b/app/views/userpage.view.html
@@ -43,7 +43,7 @@
 </div>
 
 <!-- Join league Modal -->
-<div id="join_league_modal" class="modal fade" tabindex="-1" role="dialog">
+<div id="join_league_modal" class="modal fade my-modal" tabindex="-1" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -69,7 +69,7 @@
 <!-- /Join league Modal -->
 
 <!-- Create league Modal -->
-<div id="create_league_modal" class="modal fade" tabindex="-1" role="dialog">
+<div id="create_league_modal" class="modal fade my-modal" tabindex="-1" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
